# vire

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  index.html  mockup.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: context.md  improvement-plan.md  releasing.md
src/: App.tsx  design-tokens.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_resume.rs  fs_walk.rs  lib.rs  procscan.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/process/: mod.rs
src-tauri/src/project/: mod.rs
src-tauri/src/terminal/: mod.rs
src/canvas/: VireCanvas.tsx  VireContextMenu.tsx  VireWindow.tsx
src/components/: SettingsPanel.tsx
src/shapes/: blockTypes.ts
src/shapes/blocks/: AgentBlock.tsx  BrowserBlock.tsx  EditorBlock.tsx  NoteBlock.tsx  PomodoroBlock.tsx  SourceControlBlock.tsx  StaticPreviews.tsx  TaskListBlock.tsx  TerminalBlock.tsx
src/store/: boardTypes.ts  notify.ts  tauriStorage.ts  useActivityStore.ts  useVireStore.ts  windowFocus.ts
src/ui/: QuickOpen.tsx  VireToolbar.tsx  VireTopbar.tsx  WorktreeDropdown.tsx
