[package]
name = "vire"
version = "0.0.0"
description = "Vire — Infinite Canvas Workspace"
authors = ["Diego Arenas"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
# ponytail: libghostty-vt removido — terminal streaming es Fase 2,
# y zig 0.15.2 no linkea en macOS 26. Cuando se implemente terminal
# real, habrá que resolver zig 0.16.0 + ghostty source.
# libghostty-vt = "0.2"
